# pcl-vcpkg-starter

./: CMakeLists.txt  README.md  vcpkg.json
docs/: BUILD.md  EXTERNAL_LIBRARIES.md
src/: CMakeLists.txt  pcl_main.cpp
